# gala-gopher

./: .gitattributes  .gitignore  .gitlint  CMakeLists.txt  README.en.md  README.md  README_EN.md  build.sh  gala-gopher.spec  gopher-install.sh
.github/workflows /: readme.yml
backend/: backend.json  backend.py  main.py
btf/openEuler/20.03/arm64/: 4.19.90-2112.8.0.0131.oe1.aarch64.btf.tar.xz
btf/openEuler/20.03/x86_64/: 4.19.90-2112.8.0.0131.oe1.x86_64.btf.tar.xz
btf/openEuler/22.03/arm64/: 5.10.0-136.12.0.86.oe2203sp1.aarch64.btf.tar.xz  5.10.0-153.12.0.92.oe2203sp2.aarch64.btf.tar.xz  5.10.0-60.18.0.50.oe2203.aarch64.btf.tar.xz
btf/openEuler/22.03/x86_64/: 5.10.0-136.12.0.86.oe2203sp1.x86_64.btf.tar.xz  5.10.0-153.12.0.92.oe2203sp2.x86_64.btf.tar.xz  5.10.0-60.18.0.50.oe2203.x86_64.btf.tar.xz
cmake/: FindGlibc.cmake
config/: APIs for Dynamic Probe Configuration.md  gala-gopher-app.conf  gala-gopher.conf  gala-gopher支持动态配置接口设计_v0.3.md  probes.init  task_whitelist.conf
doc/: README.md  api_doc.md  compatible.md  conf_introduction.md  constraints_introduction.md  design_coe.md  example_CDN_trace.md  how_to_add_probe.md  how_to_build_docker_image.md  how_to_tail_probe.md
docker/: Dockerfile
k8s/: README.md  README_EN.md  daemonset.yaml.tmpl
res/: event_multy_language.rc
script/: init_probes.sh  start_pre.sh
service/: gala-gopher.service
src/: init.c
src/api/: rest_server.c  rest_server.h  rest_server_event2.c  rest_server_event2.h
src/cmd/: base_info.h  client.c  cmd_client.c  cmd_common.c  cmd_common.h  cmd_server.c  cmd_server.h  server.c  server.h
src/common/: Makefile  args.c  args.h  common.h  container.c  container.h  core_btf.c  core_btf.h  event.c  event.h  event_config.c  event_config.h  gopher_elf.c  gopher_elf.h  hash.h  histogram.c  histogram.h  ipc.c  ipc.h  json_tool.cpp  json_tool.h  kern_config.c  kern_symb.c  kern_symb.h  logs.c  logs.cpp  logs.h  object.c  object.h  proc.c  proc.h  strbuf.c  strbuf.h  syscall.h  tc_loader.c  tc_loader.h  util.c  whitelist_config.c  whitelist_config.h
src/daemon/: CMakeLists.txt  daemon.c  daemon.h  main.c
src/dumptool/: Makefile  dumptool.c
src/egress/: egress.c  egress.h
src/ingress/: event2json.c  event2json.h  ingress.c  ingress.h
src/lib/: base.h  libvar.mk
src/lib/config/: config.c  config.h
src/lib/fifo/: fifo.c  fifo.h
src/lib/http_client/: http_client.c  http_client.h
src/lib/http_server/: http_server.c  http_server.h
src/lib/imdb/: container_cache.c  container_cache.h  imdb.c  imdb.h  lru_cache.c  metrics.c
src/lib/jvm/: Makefile  jvm_attach.c
src/lib/kafka/: kafka.c  kafka.h
src/lib/meta/: meta.c  meta.h
src/lib/probe/: Makefile  bpf.mk  ext_label.c  ext_label.h  extend_probe.c  extend_probe.h  nprobe_fprintf.h  pod_mng.c  pod_mng.h  probe.c  probe.h  probe_mng.c  probe_mng.h  probe_params_parser.c  probe_params_parser.h  snooper.bpf.c  snooper.c  snooper.h  snooper_bpf.h
src/nodeGuarder/: Makefile  nodeGuarder.c
src/probes/event.probe/: event.c  event.h  readme.md
src/probes/example.probe/: example.c
src/probes/extends/ebpf.probe/: README.md  build.sh  install.sh
src/probes/extends/ebpf.probe/src/: Makefile
src/probes/extends/ebpf.probe/src/blockprobe/: Makefile  block.h  blockprobe.bpf.c  blockprobe.c  blockprobe.h  blockprobe_iscsi.bpf.c  blockprobe_iscsi_sas.bpf.c  blockprobe_iscsi_tp.bpf.c  output.h  pagecache.bpf.c
src/probes/extends/ebpf.probe/src/cgprobe/: Makefile  cgprobe.bpf.c  cgprobe.c  cgprobe.h
src/probes/extends/ebpf.probe/src/dnsmasqprobe/: Makefile  readme.md  trace_dnsmasq.bpf.c  trace_dnsmasq.c  trace_dnsmasq.h
src/probes/extends/ebpf.probe/tools/: bpftool_aarch64  bpftool_x86_64  dwarves.tar.bz2  gen_vmlinux_h.sh  vmlinux_build.sh
src/probes/extends/java.probe/: build.sh  install.sh
src/probes/extends/java.probe/jsse.probe/: readme.md
src/probes/extends/java.probe/jstack.probe/: readme.md
src/probes/extends/java.probe/jvm.probe/: JvmProbe.java  Vm.java  readme.md
src/probes/extends/python.probe/: install.sh
src/probes/extends/python.probe/cadvisor.probe/: cadvisor_probe.conf  cadvisor_probe.py  ipc.py  readme.md
src/probes/extends/python.probe/common/: ipc.py
src/probes/extends/python.probe/pg_stat.probe/: pg_stat_probe.conf  pg_stat_probe.py  readme.md
src/probes/extends/python.probe/redis.probe/: redis_probe.py
src/probes/extends/python.probe/redis_client.probe/: client-async.py
src/probes/extends/python.probe/sermant.probe/: sermant_attach_utils.py  sermant_probe.py
src/probes/extends/sh.probe/: install.sh
src/probes/extends/sh.probe/rabbitmq.probe/: rabbitmq_probe.sh
src/probes/system_infos.probe/: system_cons.c  system_cons.h  system_cpu.c  system_cpu.h  system_disk.c  system_disk.h  system_infos.c  system_meminfo.c  system_meminfo.h  system_net.c  system_net.h  system_os.c  system_os.h  system_procs.c  system_procs.h
src/probes/virtualized_infos.probe/: virt_proc.c  virt_proc.h  virtualized_infos.c
src/resource/: resource.c  resource.h
src/systrace/cann/: cann_hook.c
src/systrace/ebpf/: ebpf_hook.c
src/watchdog/: Makefile  watchdog.c
src/web_server/: web_server.c  web_server.h  web_server_event2.c  web_server_event2.h
test/: README.md  README_EN.md  test_extend_probes.sh  test_libsystrace.c  test_modules.sh  test_probes.sh
test/test_extend_probes/extend_probe/: CMakeLists.txt  extend_tcp_endpoint_llt.c  http_server.py  test_endpoint.c  test_endpoint.h  test_tcp.c  test_tcp.h
test/test_extend_probes/extend_probe/common_interface/: common_interface.c  common_interface.h
test/test_extend_probes/java_probe/: java_probes_test.sh
test/test_extend_probes/java_probe/src/: JvmProbeTest.java  JvmSuite.java  VmTest.java
test/test_modules/: CMakeLists.txt  main.c  test_fifo.c  test_fifo.h  test_imdb.c  test_imdb.h  test_kafka.c  test_kafka.h  test_logs.c  test_logs.h  test_meta.c  test_meta.h  test_probe.c  test_probe.h
test/test_probes/: CMakeLists.txt  main.c  test_probes.c  test_probes.h
web_server/: CMakeLists.txt  deploy.yaml  main.c  web_server  web_server.conf
(+447 files in other folders)
